--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Template de shoot'em up</title>
 <meta charset="UTF-8">
 
+    <script src="js/Game.js"></script>
     <script src="js/main.js"></script>
 
 </head>    
