Encapsulate the main.js code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     
     <script src="js/main.js"></script>
     <script>
-        init();
+        var _app = new Application();
+        _app.init();
     </script>
 
 </body>
