Adding GameTime to the game, using Performance.now() if available

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Template de shoot'em up</title>
 <meta charset="UTF-8">
 
+    <script src="js/GameTime.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/GameRules.js"></script>
     <script src="js/Shaman.js"></script>
