--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/Game.js"></script>
     <script src="js/GameRules.js"></script>
     <script src="js/Shaman.js"></script>
+    <script src="js/Ennemy.js"></script>
 
 </head>    
 <body>
