--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/GameRules.js"></script>
     <script src="js/Shaman.js"></script>
     <script src="js/Ennemy.js"></script>
+    <script src="js/Character.js"></script>
 
 </head>    
 <body>
