FD ajout characters + selection + deplacements

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Template de shoot'em up</title>
+<title>Shaman Defense | Global Game Jam 2016</title>
 <meta charset="UTF-8">
 
     <script src="js/GameTime.js"></script>
