--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/Shaman.js"></script>
     <script src="js/Ennemy.js"></script>
     <script src="js/Character.js"></script>
+    <script src="js/Projectile.js"></script>
 
 </head>    
 <body>
