Ajout menu Bidon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="js/Ennemy.js"></script>
     <script src="js/Character.js"></script>
     <script src="js/Projectile.js"></script>
-
+    <script src="js/Menu.js"></script>
+    <script src="js/Button.js"></script>
 </head>    
 <body>
     
