--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="js/Projectile.js"></script>
     <script src="js/Menu.js"></script>
     <script src="js/Button.js"></script>
+    <script src="js/GameOverScreen.js"></script>
+    <script src="js/VictoryScreen.js"></script>
 </head>    
 <body>
     
