FD : ajout sons

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/Button.js"></script>
     <script src="js/GameOverScreen.js"></script>
     <script src="js/VictoryScreen.js"></script>
+    <script src="js/Sound.js"></script>
 </head>    
 <body>
     
