Ajout écrans d'intro

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="js/GameOverScreen.js"></script>
     <script src="js/VictoryScreen.js"></script>
     <script src="js/Sound.js"></script>
+    <script src="js/IntroScreen.js"></script>
+    <script src="js/TitleScreen.js"></script>
 </head>    
 <body>
     
